--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -1,14 +1,20 @@
 <div class="posts">
     {% for post in paginator.posts %}
     <div class="post-teaser">
+        {% if post.thumbnail %}
+        <div class="post-img">
+            <a aria-label="{{ post.title }}">
+                <img alt="{{ post.title }}" src="{{ post.thumbnail | relative_url }}">
+            </a>
+        </div>
+        {% endif %}
         <span>
           <header>
             <h1>
-              <a aria-label="{{ post.title }}" class="post-link" href="{{ post.url | relative_url }}">
+              <a aria-label="{{ post.title }}" class="post-link">
                 {{ post.title }}
               </a>
             </h1>
-            {% include post_info.html post=post %}
           </header>
           <div class="excerpt">
               {{ post.excerpt | strip_html | escape }}
@@ -17,3 +23,5 @@
     </div>
     {% endfor %}
 </div>
+
+{% include blog_nav.html %}
