--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -16,9 +16,9 @@
               </a>
             </h1>
           </header>
-          <!-- <div class="excerpt">
+          <div class="excerpt">
               {{ post.excerpt | strip_html | escape }}
-          </div> -->
+          </div>
       </span>
     </div>
     {% endfor %}
