--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
             <div class="footer-icons">
                 <ul>
                 <!-- Social icons from Font Awesome, if enabled -->
-                {% include icons.html %}
+                <!-- {% include icons.html %} -->
                 </ul>
             </div>
 </footer>
